# apps/api/openapi.json
@@ -7470,6 +7470,96 @@
         "required": ["state"],
         "additionalProperties": false
       },
+      "CreateFileUploadRequest": {
+        "type": "object",
+        "properties": {
+          "name": {
+            "type": "string",
+            "minLength": 1,
+            "maxLength": 255,
+            "pattern": "^[^/\\\\\\u0000-\\u001f\\u007f]+$"
+          },
+          "contentType": {
+            "type": "string",
+            "maxLength": 255,
+            "pattern": "^[a-z0-9][a-z0-9!#$&^_.+-]*\\/[a-z0-9][a-z0-9!#$&^_.+-]*$"
+          },
+          "size": {
+            "type": "integer",
+            "minimum": 0,
+            "maximum": 9007199254740991
+          },
+          "folderId": {
+            "nullable": true,
+            "type": "string",
+            "format": "uuid",
+            "pattern": "^([0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[1-8][0-9a-fA-F]{3}-[89abAB][0-9a-fA-F]{3}-[0-9a-fA-F]{12}|00000000-0000-0000-0000-000000000000|ffffffff-ffff-ffff-ffff-ffffffffffff)$"
+          },
+          "thumbnail": {
+            "type": "object",
+            "properties": {
+              "contentType": {
+                "type": "string",
+                "enum": ["image/webp", "image/jpeg", "image/png"]
+              },
+              "size": {
+                "type": "integer",
+                "minimum": 1,
+                "maximum": 524288
+              }
+            },
+            "required": ["contentType", "size"],
+            "additionalProperties": false
+          }
+        },
+        "required": ["name", "contentType", "size"],
+        "additionalProperties": false
+      },
+      "CreateFileUploadPartsRequest": {
+        "type": "object",
+        "properties": {
+          "partNumbers": {
+            "minItems": 1,
+            "maxItems": 100,
+            "type": "array",
+            "items": {
+              "type": "integer",
+              "minimum": 1,
+              "maximum": 10000
+            }
+          }
+        },
+        "required": ["partNumbers"],
+        "additionalProperties": false
+      },
+      "CompleteFileUploadRequest": {
+        "type": "object",
+        "properties": {
+          "parts": {
+            "minItems": 1,
+            "maxItems": 10000,
+            "type": "array",
+            "items": {
+              "type": "object",
+              "properties": {
+                "partNumber": {
+                  "type": "integer",
+                  "minimum": 1,
+                  "maximum": 10000
+                },
+                "etag": {
+                  "type": "string",
+                  "minLength": 1,
+                  "maxLength": 200
+                }
+              },
+              "required": ["partNumber", "etag"],
+              "additionalProperties": false
+            }
+          }
+        },
+        "additionalProperties": false
+      },
       "FileAccessExplain": {
         "type": "object",
         "properties": {
@@ -7743,96 +7833,6 @@
           "comment": {
             "type": "string",
             "maxLength": 500
-          }
-        },
-        "additionalProperties": false
-      },
-      "CreateFileUploadRequest": {
-        "type": "object",
-        "properties": {
-          "name": {
-            "type": "string",
-            "minLength": 1,
-            "maxLength": 255,
-            "pattern": "^[^/\\\\\\u0000-\\u001f\\u007f]+$"
-          },
-          "contentType": {
-            "type": "string",
-            "maxLength": 255,
-            "pattern": "^[a-z0-9][a-z0-9!#$&^_.+-]*\\/[a-z0-9][a-z0-9!#$&^_.+-]*$"
-          },
-          "size": {
-            "type": "integer",
-            "minimum": 0,
-            "maximum": 9007199254740991
-          },
-          "folderId": {
-            "nullable": true,
-            "type": "string",
-            "format": "uuid",
-            "pattern": "^([0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[1-8][0-9a-fA-F]{3}-[89abAB][0-9a-fA-F]{3}-[0-9a-fA-F]{12}|00000000-0000-0000-0000-000000000000|ffffffff-ffff-ffff-ffff-ffffffffffff)$"
-          },
-          "thumbnail": {
-            "type": "object",
-            "properties": {
-              "contentType": {
-                "type": "string",
-                "enum": ["image/webp", "image/jpeg", "image/png"]
-              },
-              "size": {
-                "type": "integer",
-                "minimum": 1,
-                "maximum": 524288
-              }
-            },
-            "required": ["contentType", "size"],
-            "additionalProperties": false
-          }
-        },
-        "required": ["name", "contentType", "size"],
-        "additionalProperties": false
-      },
-      "CreateFileUploadPartsRequest": {
-        "type": "object",
-        "properties": {
-          "partNumbers": {
-            "minItems": 1,
-            "maxItems": 100,
-            "type": "array",
-            "items": {
-              "type": "integer",
-              "minimum": 1,
-              "maximum": 10000
-            }
-          }
-        },
-        "required": ["partNumbers"],
-        "additionalProperties": false
-      },
-      "CompleteFileUploadRequest": {
-        "type": "object",
-        "properties": {
-          "parts": {
-            "minItems": 1,
-            "maxItems": 10000,
-            "type": "array",
-            "items": {
-              "type": "object",
-              "properties": {
-                "partNumber": {
-                  "type": "integer",
-                  "minimum": 1,
-                  "maximum": 10000
-                },
-                "etag": {
-                  "type": "string",
-                  "minLength": 1,
-                  "maxLength": 200
-                }
-              },
-              "required": ["partNumber", "etag"],
-              "additionalProperties": false
-            }
           }
         },
         "additionalProperties": false
